refactor(#23): remove imports não utilizados e moderniza sintaxe
- Remove imports órfãos TotalCountDTO e Collectors
- Substitui collect(Collectors.toList()) por toList()